--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "0.1.1",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "broccoli-emblem-compiler": "^0.3.18",
     "ember-cli": "0.0.46",
     "ember-cli-coffeescript": "0.0.7",
     "ember-cli-ic-ajax": "0.1.1",
